Fix additional invalid syntax

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -72,7 +72,7 @@ filter {
         "%{TIMESTAMP_ISO8601:[event][start]} %{WORD:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{URIPATH:[url][path]} %{NOTSPACE:[url][query]} %{NUMBER:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[iis][sub_status]} %{NUMBER:[iis][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[event][duration]}",
 
         # W3C/IIS URI path is missing (represented by a dash)
-        "%{TIMESTAMP_ISO8601:[event]s[start]} %{WORD:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} (?:%{URIPATH:[url][path]}|-) %{NUMBER:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[iis][sub_status]} %{NUMBER:[iis][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[event][duration]}",
+        "%{TIMESTAMP_ISO8601:[event][start]} %{WORD:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} (?:%{URIPATH:[url][path]}|-) %{NUMBER:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[iis][sub_status]} %{NUMBER:[iis][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[event][duration]}",
 
         # IIS HTTP Log Format (minimal fields)
         "%{TIMESTAMP_ISO8601:[event][start]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{DATA:[url][path]} %{NOTSPACE:[url][query]} %{NOTSPACE:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][substatus]} %{NUMBER:[http][response][win32_status]}",
@@ -281,10 +281,16 @@ filter {
     }
   }
 
-  # Tag Processing
-  mutate {
-    replace => {
-      "tags" => "%{tags.gsub(/%{[^}]+}/, '').split(',').uniq.join(',')}"
+  # Tag Processing - Deduplicate tags
+  if [tags] {
+    ruby {
+      code => '
+        if event.get("tags").is_a?(Array)
+          # Remove duplicates while preserving order
+          unique_tags = event.get("tags").uniq
+          event.set("tags", unique_tags)
+        end
+      '
     }
   }
 
@@ -524,20 +530,28 @@ filter {
     }
   }
 
-  # Map IIS status codes to ECS outcome
-  if [http][response][status_code] {
-    mutate {
-      add_field => {
-        "[event][outcome]" => "%{[http][response][status_code] < 400 ? 'success' : 'failure'}"
+  # Map IIS status codes to ECS outcome (only if not already set)
+  if [http][response][status_code] and ![event][outcome] {
+    if [http][response][status_code] < 400 {
+      mutate {
+        add_field => { "[event][outcome]" => "success" }
+      }
+    } else {
+      mutate {
+        add_field => { "[event][outcome]" => "failure" }
       }
     }
   }
 
-  # Map FTP commands to event actions
-  if [event][action] {
-    mutate {
-      add_field => {
-        "[event][outcome]" => "%{[http][response][status_code] < 400 ? 'success' : 'failure'}"
+  # Map FTP commands to event actions (only if not already set)
+  if [event][action] and ![event][outcome] and [http][response][status_code] {
+    if [http][response][status_code] < 400 {
+      mutate {
+        add_field => { "[event][outcome]" => "success" }
+      }
+    } else {
+      mutate {
+        add_field => { "[event][outcome]" => "failure" }
       }
     }
   }
