Update configs and fix date parsing bug

--- a/config/logstash/config/inputs/pds-input-s3-atm.conf
+++ b/config/logstash/config/inputs/pds-input-s3-atm.conf
@@ -14,7 +14,7 @@ input {
     id => "file_input_atm1"
   }
   s3 {
-    bucket => "S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "atm/atm-atmos-ftp/"
     add_field => {
