--- a/config/logstash/config/inputs/pds-input-s3-geo.conf
+++ b/config/logstash/config/inputs/pds-input-s3-geo.conf
@@ -68,7 +68,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "geo/geo-va"
     add_field => {
