--- a/config/logstash/config/inputs/pds-input-s3-naif.conf
+++ b/config/logstash/config/inputs/pds-input-s3-naif.conf
@@ -16,7 +16,7 @@ input {
 
   # NAIF
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "naif/naif-xferlogs"
     add_field => {
@@ -26,6 +26,6 @@ input {
       "[event][dataset]" => "naif.ftp"
     }
     ecs_compatibility => v8
-    id => "file_input_naif1"
+    id => "file_input_naif2"
   }
 }
