--- a/config/logstash/config/inputs/pds-input-s3-rings.conf
+++ b/config/logstash/config/inputs/pds-input-s3-rings.conf
@@ -3,7 +3,7 @@ input {
   s3 {
     bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
-    prefix => "rings/rings-apache-metrics/opus"
+    prefix => "rings/rings-apache-metrics/tools2"
     add_field => {
       "[organization][name]" => "rings"
       "[url][domain]" => "opus.pds-rings.seti.org"
@@ -15,7 +15,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "rings/rings-apache-metrics/server"
     add_field => {
@@ -26,6 +26,20 @@ input {
     }
     ecs_compatibility => v8
     id => "file_input_rings2"
+  }
+
+  s3 {
+    bucket => "${S3_BUCKET_NAME}"
+    region => "us-west-2"
+    prefix => "rings/rings-apache-metrics/tools_"
+    add_field => {
+      "[organization][name]" => "rings"
+      "[url][domain]" => "pds-rings.seti.org"
+      "[url][scheme]" => "https"
+      "[event][dataset]" => "rings.http"
+    }
+    ecs_compatibility => v8
+    id => "file_input_rings3"
   }
 
 }
