--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -81,7 +81,7 @@ filter {
         "%{TIMESTAMP_ISO8601:[event][start]} %{IP:[source][address]} %{NOTSPACE:[user][name]} %{NOTSPACE:[server][site]} %{IP:[server][ip]} %{NUMBER:[server][port]} %{WORD:[ftp][command]} %{DATA:[url][path]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[http][request][body][bytes]} %{NUMBER:[event][duration]}",
 
         # ATM FTP Log Format
-        "%{DAY} %{MONTH} %{MONTHDAY} %{TIME} %{YEAR} %{NUMBER:[process][pid]} %{IP:[source][address]} %{NUMBER:[http][response][body][bytes]} %{PATH:[url][path]} %{WORD:[event][action]} %{WORD:[event][type]} %{WORD:[event][direction]} %{WORD:[event][category]} %{NUMBER:[user][id]} %{WORD:[service][type]} %{NUMBER:[event][duration]} %{WORD:[file][name]} %{WORD:[file][extension]}",
+        "%{DAY:[temp][day_name]} %{MONTH:[temp][month_name]} +%{MONTHDAY:[temp][day]} %{TIME:[temp][time]} %{YEAR:[temp][year]} %{NUMBER:[event][ftp_transfer_status]:int} %{IP:[source][address]} %{NUMBER:[network][bytes]:int} %{DATA:[url][path]} %{WORD:[event][ftp_flag_1]} %{WORD:[event][ftp_flag_2]} %{WORD:[event][ftp_flag_3]} %{WORD:[event][ftp_flag_4]} %{NUMBER:[user][id]:int} %{WORD:[network][protocol]} %{NUMBER:[http][response][status_code]:int} %{DATA:[server][domain]} %{WORD:[event][action]}",
         
         # Handle ATM logs where the IP is already translated to a host
         "%{HOSTNAME:[source][address]} - - \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{DATA:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][body][bytes]}",
@@ -100,27 +100,47 @@ filter {
     tag_on_failure => "_grok_filter_initial_parse_failure"
   }
 
-  # Copy timestamp to [event][start] for Apache logs
-  if [timestamp] and !([event][start]) {
+  if [temp][day_name] and [temp][month_name] and [temp][day] and [temp][time] and [temp][year] {
+    # Combine parts of the timestamp into a single field
     mutate {
-      copy => { "timestamp" => "[event][start]" }
+      add_field => {
+        "[temp][datetime]" => "%{[temp][month_name]} %{[temp][day]} %{[temp][year]} %{[temp][time]}"
+      }
     }
-  }
 
-  # Parse all timestamps to @timestamp
-  if [event][start] {
+    # Parse the combined timestamp into [event][start]
     date {
-      match => [ "[event][start]", "ISO8601", "yyyy-MM-dd HH:mm:ss", "EEE MMM dd HH:mm:ss yyyy", "dd/MMM/yyyy:HH:mm:ss Z", "dd/MMM/yyyy:HH:mm:ss" ]
+      match => ["[temp][datetime]", "MMM dd yyyy HH:mm:ss"]
       target => "@timestamp"
-      timezone => "UTC"
-      tag_on_failure => "_datetimeparsefailure"
+      remove_field => ["temp"]
     }
-  } else if [event][action] {
-    date {
-      match => [ "message", "EEE MMM dd HH:mm:ss yyyy" ]
-      target => "@timestamp"
-      timezone => "UTC"
-      tag_on_failure => "_datetimeparsefailure"
+
+    mutate {
+      copy => { "@timestamp" => "[event][start]" }
+    }
+  } else {
+    # Copy timestamp to [event][start] for Apache logs
+    if [timestamp] and !([event][start]) {
+      mutate {
+        copy => { "timestamp" => "[event][start]" }
+      }
+    }
+
+    # Parse all timestamps to @timestamp
+    if [event][start] {
+      date {
+        match => [ "[event][start]", "ISO8601", "yyyy-MM-dd HH:mm:ss", "EEE MMM dd HH:mm:ss yyyy", "dd/MMM/yyyy:HH:mm:ss Z", "dd/MMM/yyyy:HH:mm:ss" ]
+        target => "@timestamp"
+        timezone => "UTC"
+        tag_on_failure => "_datetimeparsefailure"
+      }
+    } else if [event][action] {
+      date {
+        match => [ "message", "EEE MMM dd HH:mm:ss yyyy" ]
+        target => "@timestamp"
+        timezone => "UTC"
+        tag_on_failure => "_datetimeparsefailure"
+      }
     }
   }
 
@@ -191,6 +211,27 @@ filter {
       }
     } else {
       drop {}
+    }
+  }
+
+  # Handle status code arrays - ensure single integer value
+  if [http][response][status_code] {
+    ruby {
+      code => '
+        status_code = event.get("[http][response][status_code]")
+        if status_code.is_a?(Array)
+          # Take the first element and convert to integer
+          first_status = status_code.first
+          if first_status.is_a?(String)
+            event.set("[http][response][status_code]", first_status.to_i)
+          else
+            event.set("[http][response][status_code]", first_status.to_i)
+          end
+        elsif status_code.is_a?(String)
+          # Convert string to integer
+          event.set("[http][response][status_code]", status_code.to_i)
+        end
+      '
     }
   }
 
@@ -345,10 +386,15 @@ filter {
     }
   }
 
-  # HTTP Method Validation - Use native uppercase filter
+  # HTTP Method Validation - Use ruby for string manipulation
   if [http][request][method] {
-    uppercase {
-      field => "[http][request][method]"
+    ruby {
+      code => '
+        method = event.get("[http][request][method]")
+        if method && method != ""
+          event.set("[http][request][method]", method.upcase)
+        end
+      '
     }
   }
   
@@ -372,6 +418,7 @@ filter {
 
   # Extract URL components
   if [url][original] {
+
     urldecode {
       field => "[url][original]"
       id => "decode_url"
@@ -386,10 +433,10 @@ filter {
           "%{URIPATH:[url][path]}(?:%{URIPARAM:[url][query]})"
         ]
       }
-      tag_on_failure => "_url_parse_failure"
+      tag_on_failure => "_url_query_parse_skip"
     }
 
-    if "_url_parse_failure" not in [tags] {
+    if "_url_query_parse_skip" not in [tags] {
       # parse the address to distinguish domain or ip
       grok {
         match => {
