--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -1,5 +1,5 @@
 output {
-    if "bad_log" in [tags] or "_grok_parse_failure" in [tags] or "_dateparsefailure" in [tags] or "_url_parse_failure" in [tags] or "_invalid_http_method" in [tags] or "_template_variable" in [tags] or "_missing_url_original" in [tags] {
+    if "bad_log" in [tags] or "_grok_parse_failure" in [tags] or "_datetimeparsefailure" in [tags] or "_invalid_http_method" in [tags] or "_template_variable" in [tags] or "_missing_url_original" in [tags] {
         file {
             path => "/tmp/bad_logs_%{+YYYY-MM}.txt"
             codec => line { 
