--- a/config/logstash/config/inputs/pds-input-s3-sbn.conf
+++ b/config/logstash/config/inputs/pds-input-s3-sbn.conf
@@ -29,7 +29,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "sbn/sbn-psi-tools/"
     add_field => {
