Fix event start bug

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -114,10 +114,6 @@ filter {
       target => "@timestamp"
       remove_field => ["temp"]
     }
-
-    mutate {
-      copy => { "@timestamp" => "[event][start]" }
-    }
   } else {
     # Copy timestamp to [event][start] for Apache logs
     if [timestamp] and !([event][start]) {
@@ -142,6 +138,11 @@ filter {
         tag_on_failure => "_datetimeparsefailure"
       }
     }
+  }
+
+  # Copy @timestamp to [event][start]
+  mutate {
+    copy => { "@timestamp" => "[event][start]" }
   }
 
   # Handle datetime parsing failures
