Drop logs with invalid URL encoding

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -100,6 +100,11 @@ filter {
     tag_on_failure => "_grok_filter_initial_parse_failure"
   }
 
+  # Drop logs with invalid URL encoding
+  if [url][original] =~ /\\u00[0-9a-fA-F]{2}/ {
+    drop { }
+  }
+
   if [temp][day_name] and [temp][month_name] and [temp][day] and [temp][time] and [temp][year] {
     # Combine parts of the timestamp into a single field
     mutate {
