Improve http method handling for message containing bugs

--- a/tests/config/test-input-ftp.conf
+++ b/tests/config/test-input-ftp.conf
@@ -63,6 +63,15 @@ input {
       
       # Very large transfer size
       'Thu May  1 02:09:07 2025 1 171.107.117.70 999999999999 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c'
+
+      # Converted FTP logs
+      '219.231.172.64 - - [01/Jan/2025:07:56:52 -0800] "DataChannelOpened - HTTP/1.1" - 0 "-" "-"',
+
+      # Converted FTP log
+      '219.231.172.64 - - [01/Jan/2025:07:56:52 -0800] "DataChannelClosed - HTTP/1.1" - 0 "-" "-"',
+
+      # Converted FTP log
+      '219.231.172.64 - - [01/Jan/2025:07:56:52 -0800] "RETR - HTTP/1.1" - 0 "-" "-"'
     ]
     # Add fields at input stage
     add_field => {
