--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -62,6 +62,9 @@ filter {
         # Apache Common Log Format
         "%{COMMONAPACHELOG}",
 
+        # Minimal Apache common log format missing the status code, response size, referrer, and user agent
+        "%{IP:[source][address]} - - \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{URIPATH:[url][path]} HTTP/%{NUMBER:[http][version]}\"",
+
         # IIS HTTP Log Format (with W3SVC)
         "%{TIMESTAMP_ISO8601:[event][start]} %{NOTSPACE:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{DATA:[url][path]}(?:%{URIPARAM:[url][query]})? %{NOTSPACE:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][substatus]} %{NUMBER:[http][response][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[http][request][body][bytes]} %{NUMBER:[event][duration]}",
 
@@ -190,6 +193,43 @@ filter {
         "[error][code]" => "%{[http][response][win32_status]}"
       }
       remove_field => ["[http][response][win32_status]"]
+    }
+  }
+
+  # HTTP Method Validation - Use ruby for string manipulation
+  if [http][request][method] {
+    ruby {
+      code => '
+        method = event.get("[http][request][method]")
+        if method && method != ""
+          event.set("[http][request][method]", method.upcase)
+        end
+      '
+    }
+  }
+  
+  if [http][request][method] and [http][request][method] != "" {
+    if [http][request][method] =~ "^(ABOR|ACCT|ALLO|APPE|AUTH|CDUP|CWD|DELE|FEAT|HELP|LIST|MODE|MKD|NLST|NOOP|OPTS|PASS|PASV|PBSZ|PORT|PROT|PWD|QUIT|REIN|REST|RETR|RMD|RNFR|RNTO|SITE|SIZE|STAT|STOR|STOU|STRU|SYST|TYPE|USER|DATACHANNELOPENED|DATACHANNELCLOSED)$" {
+      mutate {
+        copy => { "[http][request][method]" => "[ftp][command]" }
+        remove_field => ["[http][request][method]"]
+      }
+    } else if [http][request][method] =~ "^(SSTP_DUPLEX_POST|SSTP_DUPLEX_GET)$" {
+      mutate {
+        add_tag => ["_invalid_http_method"]
+        add_field => {
+          "[error][type]" => "invalid_http_method_known"
+          "[error][message]" => "Invalid HTTP method (known issue: RMS): %{[http][request][method]}"
+        }
+      }
+    } else if [http][request][method] !~ "^(GET|POST|PUT|DELETE|HEAD|OPTIONS|PATCH)$" {
+      mutate {
+        add_tag => ["_invalid_http_method"]
+        add_field => {
+          "[error][type]" => "invalid_http_method"
+          "[error][message]" => "Invalid HTTP method: %{[http][request][method]}"
+        }
+      }
     }
   }
 
@@ -388,30 +428,6 @@ filter {
             event.set("[url][domain]", filtered_domains.first || domain.first)
           end
         '
-      }
-    }
-  }
-
-  # HTTP Method Validation - Use ruby for string manipulation
-  if [http][request][method] {
-    ruby {
-      code => '
-        method = event.get("[http][request][method]")
-        if method && method != ""
-          event.set("[http][request][method]", method.upcase)
-        end
-      '
-    }
-  }
-  
-  if [http][request][method] and [http][request][method] != "" {
-    if [http][request][method] !~ "^(GET|POST|PUT|DELETE|HEAD|OPTIONS|PATCH)$" {
-      mutate {
-        add_tag => ["_invalid_http_method"]
-        add_field => {
-          "[error][type]" => "invalid_http_method"
-          "[error][message]" => "Invalid HTTP method: %{[http][request][method]}"
-        }
       }
     }
   }
