Update logstash config to throttle requests when AOSS is overloaded

--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -22,6 +22,12 @@ output {
             default_server_major_version => 2
             document_id => "%{[event][hash]}"
             manage_template => false
+            flush_size => 250                  # REDUCE BATCH SIZE
+            idle_flush_time => 5              # REDUCE STALE EVENT DELAY
+            retry_on_conflict => 3
+            retry_max_attempts => 5
+            backoff_policy => "exponential"   # ENABLE BACKOFF STRATEGY
+            dead_letter_queue.enable => true
         }
     }
 }
