--- a/config/logstash/config/inputs/pds-input-s3-atm.conf
+++ b/config/logstash/config/inputs/pds-input-s3-atm.conf
@@ -10,7 +10,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "atm.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_atm1"
   }
   s3 {
@@ -23,7 +23,7 @@ input {
       "[url][scheme]" => "ftp"
       "[event][dataset]" => "atm.ftp"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_atm2"
   }
 }
