--- a/config/logstash/config/inputs/pds-input-s3-geo.conf
+++ b/config/logstash/config/inputs/pds-input-s3-geo.conf
@@ -8,8 +8,9 @@ input {
       "[organization][name]" => "geo"
       "[url][domain]" => "an.rsl.wustl.edu"
       "[url][scheme]" => "https"
+      "[event][dataset]" => "geo.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_geo1"
   }
 
@@ -21,8 +22,9 @@ input {
       "[organization][name]" => "geo"
       "[url][domain]" => "ode.rsl.wustl.edu"
       "[url][scheme]" => "https"
+      "[event][dataset]" => "geo.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_geo2"
   }
 
@@ -34,8 +36,9 @@ input {
       "[organization][name]" => "geo"
       "[url][domain]" => "pds-geosciences.wustl.edu"
       "[url][scheme]" => "ftp"
+      "[event][dataset]" => "geo.ftp"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_geo3"
   }
 
@@ -49,7 +52,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "geo.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_geo4"
   }
 
@@ -63,7 +66,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "geo.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_geo5"
   }
 
@@ -77,7 +80,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "geo.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_geo6"
   }
 }
