--- a/config/logstash/config/inputs/pds-input-s3-naif.conf
+++ b/config/logstash/config/inputs/pds-input-s3-naif.conf
@@ -10,7 +10,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "naif.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_naif1"
   }
 
@@ -25,7 +25,7 @@ input {
       "[url][scheme]" => "ftp"
       "[event][dataset]" => "naif.ftp"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_naif2"
   }
 }
