--- a/config/logstash/config/inputs/pds-input-s3-ppi.conf
+++ b/config/logstash/config/inputs/pds-input-s3-ppi.conf
@@ -10,7 +10,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "ppi.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_ppi1"
   }
 }
