--- a/config/logstash/config/inputs/pds-input-s3-rings.conf
+++ b/config/logstash/config/inputs/pds-input-s3-rings.conf
@@ -10,7 +10,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "rings.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_rings1"
   }
 
@@ -24,7 +24,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "rings.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_rings2"
   }
 
@@ -38,7 +38,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "rings.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_rings3"
   }
 
