--- a/config/logstash/config/inputs/pds-input-s3-sbn.conf
+++ b/config/logstash/config/inputs/pds-input-s3-sbn.conf
@@ -10,7 +10,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "sbn.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_sbnumd1"
   }
 
@@ -24,7 +24,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "sbn.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_sbnpsi1"
   }
 
@@ -38,7 +38,7 @@ input {
       "[url][scheme]" => "https"
       "[event][dataset]" => "sbn.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_sbnpsi2"
   }
 
