--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,9 @@ lib64/
 .*.swp
 var/
 target/
+config/logstash/config/pipelines.yml
+config/logstash/config/pipelines/
+.env
 
 # other stuff
 *.log
