--- a/config/logstash/config/inputs/pds-input-s3-img.conf
+++ b/config/logstash/config/inputs/pds-input-s3-img.conf
@@ -10,7 +10,7 @@ input {
       "[url][scheme]" => "https"  
       "[event][dataset]" => "img.http"
     }
-    ecs_compatibility => v8
+    ecs_compatibility => "v8"
     id => "file_input_img1"
   }
 }
