Update output formattting

--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -11,11 +11,11 @@ output {
             ecs_compatibility => "v8"
             index => "${INDEX_PREFIX}-%{+YYYY-MM}"
             hosts => "${AOSS_URL}"
-            auth_type => 'aws_iam'
-            aws_access_key_id => ''
-            aws_secret_access_key => ''
-            region => 'us-west-2'
-            service_name => 'aoss'
+            auth_type => "aws_iam"
+            aws_access_key_id => ""
+            aws_secret_access_key => ""
+            region => "us-west-2"
+            service_name => "aoss"
             legacy_template => false
             default_server_major_version => 2
             document_id => "%{[event][hash]}"
