Fix bug in output config

--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -25,7 +25,7 @@ output {
             retry_on_conflict => 3
             retry_max_attempts => 5
             backoff_policy => "exponential"   # ENABLE BACKOFF STRATEGY
-            dead_letter_queue.enable => true
+            dead_letter_queue => true
         }
     }
 }
