Remove config that is invalid for opensearch

--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -11,21 +11,17 @@ output {
             ecs_compatibility => "v8"
             index => "${INDEX_PREFIX}-%{+YYYY-MM}"
             hosts => "${AOSS_URL}"
-            auth_type => "aws_iam"
-            aws_access_key_id => ""
-            aws_secret_access_key => ""
-            region => "us-west-2"
-            service_name => "aoss"
+            auth_type => {
+                type => 'aws_iam'
+                aws_access_key_id => ''
+                aws_secret_access_key => ''
+                region => 'us-west-2'
+                service_name => 'aoss'
+            }
             legacy_template => false
             default_server_major_version => 2
             document_id => "%{[event][hash]}"
             manage_template => false
-            flush_size => 250                  # REDUCE BATCH SIZE
-            idle_flush_time => 5              # REDUCE STALE EVENT DELAY
-            retry_on_conflict => 3
-            retry_max_attempts => 5
-            backoff_policy => "exponential"   # ENABLE BACKOFF STRATEGY
-            dead_letter_queue => true
         }
     }
 }
