Sanitize queryparams per PPI use case

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -502,6 +502,19 @@ filter {
         urldecode {
           field => "[url][queryparams]"
         }
+        # Sanitize queryparam keys to avoid dots in field names
+        ruby {
+          code => '
+            if event.get("[url][queryparams]").is_a?(Hash)
+              sanitized = {}
+              event.get("[url][queryparams]").each do |k, v|
+                sanitized[k.gsub(".", "_")] = v
+              end
+              event.set("[url][queryparams]", sanitized)
+            end
+          '
+          id => "sanitize_queryparam_keys"
+        }
         ruby {
           code => '
             if event.get("[url][queryparams]").is_a?(Hash)
