--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -108,6 +108,13 @@ filter {
     drop { }
   }
 
+  # Remove other non-printable ASCII characters from [url][original]
+  mutate {
+    gsub => [
+      "[url][original]", "[^\x20-\x7E]", ""
+    ]
+  }
+
   if [temp][day_name] and [temp][month_name] and [temp][day] and [temp][time] and [temp][year] {
     # Combine parts of the timestamp into a single field
     mutate {
@@ -209,7 +216,7 @@ filter {
   }
   
   if [http][request][method] and [http][request][method] != "" {
-    if [http][request][method] =~ "^(ABOR|ACCT|ALLO|APPE|AUTH|CDUP|CWD|DELE|FEAT|HELP|LIST|MODE|MKD|NLST|NOOP|OPTS|PASS|PASV|PBSZ|PORT|PROT|PWD|QUIT|REIN|REST|RETR|RMD|RNFR|RNTO|SITE|SIZE|STAT|STOR|STOU|STRU|SYST|TYPE|USER|DATACHANNELOPENED|DATACHANNELCLOSED)$" {
+    if [http][request][method] =~ "^(ABOR|ACCT|ALLO|APPE|AUTH|CDUP|CWD|DELE|FEAT|HELP|LIST|MODE|MKD|NLST|NOOP|OPTS|PASS|PASV|PBSZ|PORT|PROT|PWD|QUIT|REIN|REST|RETR|RMD|RNFR|RNTO|SITE|SIZE|STAT|STOR|STOU|STRU|SYST|TYPE|USER|DATACHANNELOPENED|DATACHANNELCLOSED|CONTROLCHANNELOPENED|CONTROLCHANNELCLOSED)$" {
       mutate {
         copy => { "[http][request][method]" => "[ftp][command]" }
         remove_field => ["[http][request][method]"]
@@ -487,6 +494,11 @@ filter {
         }
         overwrite => [ "[url][query]" ]
         tag_on_failure => "_grokparsefailure_urlquery"
+      }
+
+      # Identify logs with suspicious query parameters
+      if [url][query] =~ /allow_url_include|auto_prepend_file/ {
+        mutate { add_tag => ["_suspicious_query"] }
       }
 
       if [url][query] {
