--- a/tests/config/test-input-https.conf
+++ b/tests/config/test-input-https.conf
@@ -80,7 +80,7 @@ input {
 
       # GEO Test Cases
       '65.108.2.73 - - [12/Dec/2024:06:00:03 -0800] "GET /speclib/urn-nasa-pds-relab/data_reflectance/ftir1/1101s549.xml HTTP/1.1" 200 9797 "https://pds-geosciences.wustl.edu/speclib/urn-nasa-pds-relab/data_reflectance/ftir1/" "Mozilla/5.0+(compatible;+SeekportBot;++https://bot.seekport.com)"',
-      '20.171.207.25 - - [02/Mar/2025:01:33:15 -0800] "GET /moon/indexproductpage.aspx HTTP/1.1"'
+      '20.171.207.25 - - [02/Mar/2025:01:33:15 -0800] "GET /moon/indexproductpage.aspx HTTP/1.1"',
 
       # PPI Test Cases
       '66.249.79.169 - - [01/Jan/2025:02:13:59 -0800] "GET /metadex/bundle/select/?q=*:*&version=2.2&facet.pivot=investigation_area.name,archive_type&facet=true&rows=0&indent=on&wt=json HTTP/1.1" 200 904 "-" "Mozilla/5.0 (Linux; Android 6.0.1; Nexus 5X Build/MMB29P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.6778.204 Mobile Safari/537.36 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)"'
