--- a/setup.cfg
+++ b/setup.cfg
@@ -17,17 +17,17 @@
 # it, and how to get it.
 
 [metadata]
-name = your_package_name
+name = pds-web-analytics
 author = PDS
 author_email = pds_operator@jpl.nasa.gov
-description = A short description, about 100-120 characters, suitable for search summaries
+description = PDS Web Analytics - Log processing and S3 synchronization for Planetary Data System
 long_description = file: README.md
 long_description_content_type = text/markdown
-version = file: src/pds/your_package_name/VERSION.txt
+version = file: src/pds/web_analytics/VERSION.txt
 license = apache-2.0
-keywords = pds, planetary data, various, other, keywords
-url = https://github.com/NASA-PDS/<TODO: complete URL>
-download_url = https://github.com/NASA-PDS/<TODO: complete URL>/releases/
+keywords = pds, planetary data, web analytics, logstash, s3, aws
+url = https://github.com/NASA-PDS/web-analytics
+download_url = https://github.com/NASA-PDS/web-analytics/releases/
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.9
@@ -44,8 +44,7 @@ classifiers =
 [options]
 install_requires =
     python-box~=7.3
-    boto3~=1.25
-    boto3-stubs[apigateway,cognito,essential]~=1.25
+    pyyaml~=6.0
 
 # Change this to False if you use things like __file__ or __path__—which you
 # shouldn't use anyway, because that's what ``pkg_resources`` is for 🙂
@@ -60,28 +59,32 @@ python_requires = >= 3.9
 
 [options.extras_require]
 dev =
-    black
-    flake8
-    flake8-bugbear
-    flake8-docstrings
-    pep8-naming
-    mypy
-    pydocstyle
-    coverage
-    pytest
-    pytest-cov
-    pytest-watch
-    pytest-xdist
-    pre-commit
-    sphinx
-    sphinx-rtd-theme
-    tox
-    types-setuptools
+    black~=23.7.0
+    docutils            <= 0.16    # In 0.17 bullet lists aren't rendered at all with sphinx-rtd-theme
+    sphinx              ~= 5.0.0   # Documentation generation
+    sphinx-rtd-theme    == 0.5.0   # Documentation theme
+    sphinx-argparse     == 0.2.5   # I don't think we even use this
+    mypy-zope           == 1.0.5   # Type stubs for zope.interface
+    types-pkg_resources == 0.1.3   # Type stubs for package introspection API
+    flake8              == 3.9.2   # Unquestioning adherence to coding stylees
+    flake8-bugbear      == 21.9.1  # Ditto
+    flake8-docstrings   == 1.6.0   # And check the docstrings too
+    pep8-naming         == 0.12.1  # And even your function and variable names
+    mypy                ~= 1.10.0  # Do your type annotations actually work?
+    pydocstyle          == 6.1.1   # Do your docstrings look like everyone else's?
+    coverage            == 5.5     # Does all your code get exercised?
+    pytest              == 6.2.5   # Testing
+    pytest-cov          == 5.0.0   # pytest + coverage = pytest-cov
+    pytest-watch        == 4.2.0   # Automatic testing every time you save a file
+    pytest-xdist        == 2.4.0   # You got multiple cores, right?
+    pre-commit          == 2.15.0  # Auto-run checks on every commit
+    tox                 ~= 4.11.0  # A way to automate and standardize testing in Python
+    types-requests      ~= 2.31.0.20240218
 
 [options.entry_points]
 # Put your entry point scripts here
-#console_scripts =
-    # some_script: ...
+console_scripts =
+    s3-log-sync = pds.web_analytics.s3_sync:main
 
 [options.packages.find]
 # Don't change this. Needed to find packages under src/
@@ -188,19 +191,3 @@ select = D,E,F,N,W,B,B902,B903,B950
 [mypy-pds.*._version]
 # We don't care about issues in versioneer's files
 ignore_errors = True
-
-
-# Versioneer
-# ----------
-#
-# Versioneer handles automatically determining the version number of your
-# Python package by examining ``git`` tags and history.
-#
-# See https://github.com/python-versioneer/python-versioneer for more.
-[versioneer]
-VCS                = git
-style              = pep440
-tag_prefix         = v
-versionfile_source = src/pds/my_pds_module/_version.py
-versionfile_build  = pds/my_pds_module/_version.py
-parentdir_prefix   = pds.my_pds_module-
