Update ATM FTP log pattern

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -84,7 +84,7 @@ filter {
         "%{TIMESTAMP_ISO8601:[event][start]} %{IP:[source][address]} %{NOTSPACE:[user][name]} %{NOTSPACE:[server][site]} %{IP:[server][ip]} %{NUMBER:[server][port]} %{WORD:[ftp][command]} %{DATA:[url][path]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[http][request][body][bytes]} %{NUMBER:[event][duration]}",
 
         # ATM FTP Log Format
-        "%{DAY:[temp][day_name]} %{MONTH:[temp][month_name]} +%{MONTHDAY:[temp][day]} %{TIME:[temp][time]} %{YEAR:[temp][year]} %{NUMBER:[event][ftp_transfer_status]:int} %{IP:[source][address]} %{NUMBER:[network][bytes]:int} %{DATA:[url][path]} %{WORD:[event][ftp_flag_1]} %{WORD:[event][ftp_flag_2]} %{WORD:[event][ftp_flag_3]} %{WORD:[event][ftp_flag_4]} %{NUMBER:[user][id]:int} %{WORD:[network][protocol]} %{NUMBER:[http][response][status_code]:int} %{DATA:[server][domain]} %{WORD:[event][action]}",
+        "%{DAY:[temp][day_name]} %{MONTH:[temp][month_name]}\s+%{MONTHDAY:[temp][day]} %{TIME:[temp][time]} %{YEAR:[temp][year]} %{NUMBER:[event][ftp_transfer_status]:int} %{IP:[source][address]} %{NUMBER:[network][bytes]:int} %{DATA:[url][path]} %{WORD:[event][ftp_flag_1]} %{WORD:[event][ftp_flag_2]} %{WORD:[event][ftp_flag_3]} %{WORD:[event][ftp_flag_4]} %{NUMBER:[user][id]:int} %{WORD:[network][protocol]} %{NUMBER:[http][response][status_code]:int} %{DATA:[server][domain]} %{WORD:[event][action]}",
 
         # Handle ATM logs where the IP is already translated to a host
         "%{HOSTNAME:[source][address]} - - \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{DATA:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][body][bytes]}",
