Add additional comments to log messages

--- a/tests/config/test-input-ftp.conf
+++ b/tests/config/test-input-ftp.conf
@@ -4,19 +4,19 @@ input {
       # Standard FTP log format
       'Thu May  1 02:09:07 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c',
 
-      # Malformed timestamp
+      # Invalid timestamp (will show up as invalid-datetime)
       'Invalid Date 02:09:08 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c',
 
-      # Malformed IP address
+      # Invalid IP address (will show up as invalid-datetime)
       'Thu May  1 02:09:09 2025 1 256.256.256.256 1579 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c',
 
       # Malformed file path with Unicode
       'Thu May  1 02:09:10 2025 1 171.107.117.70 1579 /IJW/2000_images/\u0000\u0000.htm b _ o a 12345 ftp 0 * c',
 
-      # Malformed transfer size
+      # Invalid transfer size (will show up as invalid-datetime)
       'Thu May  1 02:09:11 2025 1 171.107.117.70 invalid /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c',
 
-      # Malformed operation type
+      # Invalid operation type (will show up as invalid-datetime)
       'Thu May  1 02:09:12 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm invalid _ o a 12345 ftp 0 * c',
 
       # Malformed access mode
@@ -28,13 +28,13 @@ input {
       # Malformed authentication
       'Thu May  1 02:09:15 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o invalid 12345 ftp 0 * c',
 
-      # Malformed user ID
+      # Malformed user ID (will show up as invalid-datetime)
       'Thu May  1 02:09:16 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o a invalid ftp 0 * c',
 
       # Malformed service
       'Thu May  1 02:09:17 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o a 12345 invalid 0 * c',
 
-      # Malformed completion status
+      # Malformed completion status (will show up as invalid-datetime)
       'Thu May  1 02:09:18 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp invalid * c',
 
       # Malformed completion code
@@ -43,7 +43,7 @@ input {
       # Malformed transfer mode
       'Thu May  1 02:09:20 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * invalid',
 
-      # Missing fields
+      # Missing fields (will show up as invalid-datetime)
       'Thu May  1 02:09:21 2025 1 171.107.117.70 1579 /IJW/2000_images/bc0101.htm',
 
       # Extra fields
@@ -62,7 +62,7 @@ input {
       'Thu May  1 02:09:26 2025 1 171.107.117.70 1579 /IJW/2000_images/\' + \'a\' * 1000 + \'.htm b _ o a 12345 ftp 0 * c',
 
       # Very large transfer size
-      'Thu May  1 02:09:27 2025 1 171.107.117.70 999999999999 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c'
+      'Thu May  1 02:09:27 2025 1 171.107.117.70 999999999999 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c',
 
       # Converted FTP logs
       '219.231.172.64 - - [01/Jan/2025:07:56:52 -0800] "DataChannelOpened - HTTP/1.1" - 0 "-" "-"',
