Update output path for corrupt messages

--- a/tests/config/test-output.conf
+++ b/tests/config/test-output.conf
@@ -1,7 +1,7 @@
 output {
   if "_datetimeparsefailure" in [tags] {
     file {
-      path => "${OUTPUT_DIR}/invalid-datetime/%{+YYYY-MM-dd}/%{[source][address]}-%{[@timestamp]}.json"
+      path => "${OUTPUT_DIR}/corrupt-logs/%{+YYYY-MM-dd}/%{[source][address]}-%{[@timestamp]}.json"
       codec => json_lines
       create_if_deleted => true
     }
