Run tests synchronous to avoid logstash race conditions

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,8 @@ addopts =
     --tb=short
     --verbose
     --color=yes
+    --dist=no
+    -n 0
 markers =
     unit: Unit tests
     integration: Integration tests
