Refactor to use boto3 instead of aws cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ classifiers =
 install_requires =
     python-box~=7.3
     pyyaml~=6.0
+    boto3~=1.35.10
 
 # Change this to False if you use things like __file__ or __path__—which you
 # shouldn't use anyway, because that's what ``pkg_resources`` is for 🙂
